[project]
name = "DisplayPad.py"
version = "1.0.0"
authors = [
  { name="Sytxlabs", email="info@sytxlabs.eu" },
]
description = "A simple library to for the Mountain DisplayPad"
readme = "README.md"
requires-python = ">=3.8"
classifiers = []

[project.urls]
Homepage = "https://sytxlabs.eu"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"